--- a/.npmignore
+++ b/.npmignore
@@ -1,51 +1,55 @@
-# Exclude unnecessary files from npm package
-
-# Source control
-.git/
-.gitignore
-.npmignore
-
-# Development dependencies and environment
-node_modules/
-.env
-.vscode/
-.idea/
-
 # Test files
 test/
-tests/
-__tests__/
 *.test.js
 *.spec.js
+
+# Development files
+.github/
+.vscode/
+.idea/
+examples/
+
+# Documentation
+contributing.md
+changelog.md
+*.md
+!readme.md
+
+# Git files
+.git/
+.gitignore
+.gitattributes
+
+# CI/CD
+.travis.yml
+.gitlab-ci.yml
+circle.yml
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Coverage
 coverage/
 .nyc_output/
 
-# Build output
-dist/
-build/
-
-# Logs and temporary files
-logs/
-*.log
+# Temporary files
+tmp/
+temp/
 *.tmp
-*.temp
-*.cache
-*.bak
+test-all-features.js
+**/test-output/
+**/output/
 
-# Configuration files
-*.yml
-*.yaml
-*.config.js
-*.config.json
+# Image files
+examples/**/*.jpg
+examples/**/*.jpeg
+examples/**/*.png
+examples/**/*.gif
 
-# Documentation and other non-essential files
-README.md
-LICENSE
-CHANGELOG.md
-CONTRIBUTING.md
-*.md
-
-# Excluding unnecessary files from npm package
-images/
-samples/
-examples/
+# Don't ignore these (override)
+!readme.md
+!license
